-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0-beta
-
76afffe43a14f1cde3742f901f21459835380437 7ca474b2c81883c6a5ca8e8044ee4a45690f7152
- relates to
-
QTCREATORBUG-11761 QML debugging fro QML apps is disabled (by default)
-
- Closed
-
-
QTCREATORBUG-9836 [REG] Debugging terminates with "Could not connect to the in-process QML debugger. The application is not set up for QML/JS debugging."
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-11474 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 81303,3 | Enable QML debugging only if project includes a qml library | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 81857,6 | Update debugger language aspect in run settings when qmake step changes | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |